// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal useModal opens and closes modal 1`] = `
<body>
  <div
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
      <div
        class="fixed z-[1300] inset-0 flex flex-col text-lg justify-center items-center MuiModal-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="opacity-0 transition-opacity MuiModal-backdrop fixed -z inset-0 bg-black bg-opacity -webkit-tap-highlight-color"
          style="transition-duration: 300ms; opacity: 1;"
        />
        <div
          data-testid="sentinelStart"
          tabindex="0"
        />
        <div
          class="opacity-0 transition-opacity bg-white relative outline-none overflow-y shadow-2 flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] max-h-[calc(100%_ sm:max-h-[calc(100%_"
          role="dialog"
          style="transition-duration: 300ms; opacity: 1;"
          tabindex="-1"
        >
          <p>
            Modal content
          </p>
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
            data-component-type="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Hide
            </span>
          </button>
        </div>
        <div
          data-testid="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal useModal opens and closes modal 2`] = `
<body>
  <div
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Modal useModal shows multiple modals at the same time 1`] = `
<body>
  <div
    id="modal-root"
  />
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show first
        </span>
      </button>
      <button
        aria-hidden="true"
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show second
        </span>
      </button>
      <div
        aria-hidden="true"
        class="fixed z-[1300] inset-0 flex flex-col text-lg justify-center items-center MuiModal-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="opacity-0 transition-opacity MuiModal-backdrop fixed -z inset-0 bg-black bg-opacity -webkit-tap-highlight-color"
          style="transition-duration: 300ms; opacity: 1;"
        />
        <div
          data-testid="sentinelStart"
          tabindex="0"
        />
        <div
          class="opacity-0 transition-opacity bg-white relative outline-none overflow-y shadow-2 flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] max-h-[calc(100%_ sm:max-h-[calc(100%_"
          role="dialog"
          style="transition-duration: 300ms; opacity: 1;"
          tabindex="-1"
        >
          <p>
            First modal content
          </p>
        </div>
        <div
          data-testid="sentinelEnd"
          tabindex="0"
        />
      </div>
      <div
        class="fixed z-[1300] inset-0 flex flex-col text-lg justify-center items-center MuiModal-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="opacity-0 transition-opacity MuiModal-backdrop fixed -z inset-0 bg-black bg-opacity -webkit-tap-highlight-color"
          style="transition-duration: 300ms; opacity: 1;"
        />
        <div
          data-testid="sentinelStart"
          tabindex="0"
        />
        <div
          class="opacity-0 transition-opacity bg-white relative outline-none overflow-y shadow-2 flex flex-col m-4 sm:h-auto sm:m-8 max-w-[calc(100%_ sm:max-w-[calc(100%_ rounded-md w-[40.625rem] max-h-[calc(100%_ sm:max-h-[calc(100%_"
          role="dialog"
          style="transition-duration: 300ms; opacity: 1;"
          tabindex="-1"
        >
          <p>
            Second modal content
          </p>
        </div>
        <div
          data-testid="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;
